# oop3-_-

./: Array.h  CMakeLists.txt  Figure.cpp  Figure.h  README.md  Rectangle.cpp  Square.cpp  Square.h  main.cpp  tests.cpp
